--- a/users/src/app/components/choose/choose.component.html
+++ b/users/src/app/components/choose/choose.component.html
@@ -57,13 +57,13 @@
       <div class="title">MediGest</div>
       <div class="image-container">
         <div class="option-container" style="margin-right: 300px;">
-          <a routerLink="/login"><img src="assets/doctena-client-boite.png" class="option"></a>
-          <label >im a patient</label> 
+          <a routerLink="/register"><img src="assets/doctena-client-boite.png" class="option"></a>
+          <label >I'm a patient</label> 
           
         </div>
         <div class="option-container">
-          <a routerLink="/doc/Register"><img src="assets/doctena-medecin-boite.png" class="option"></a>
-          <label>im a doctor</label>
+          <a routerLink="/doc/login"><img src="assets/doctena-medecin-boite.png" class="option"></a>
+          <label>I'm a doctor</label>
         </div>
       </div>
       <h3 style="margin-top: 70px;color: white;">What are you going to use our site for ?</h3>
