--- a/users/src/app/components/doctors/doctors.component.html
+++ b/users/src/app/components/doctors/doctors.component.html
@@ -24,8 +24,8 @@
               </div>
             </div>
             <div class="member-info">
-              <a routerLink="/home/doctor/{{doc.id}}"><h4>{{doc.username}}</h4></a>
-              <span style="font-weight: bolder;font-size: 15px;">Specializes in the {{doc.domainMedical.name}} field</span>
+              <a routerLink="/home/doctor/{{doc?.id}}"><h4>{{doc?.username}}</h4></a>
+              <span style="font-weight: bolder;font-size: 15px;">Specializes in the {{domainname}} field</span>
             </div>
           </div>
         </div>
