--- a/users/src/app/components/cancer-prediction/cancer-prediction.component.html
+++ b/users/src/app/components/cancer-prediction/cancer-prediction.component.html
@@ -19,9 +19,7 @@
         <div class="modal-body">
           Please keep in mind that the prediction system is not 100% correct, so please use it accordingly.
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -56,12 +54,14 @@
     <div class="row mt-5">
       <div class="col-lg-5">
         <span class="border border-primary rounded p-1 d-flex justify-content-center align-items-center">
-          <img [src]="selectedImageURL" alt="User Image" class="img-thumbnail" style="height: 100%;width: 100%;object-fit: contain;">
+          <img *ngIf="selectedImageURL" [src]="selectedImageURL" alt="" class="img-thumbnail" style="height: 100%;width: 100%;object-fit: contain;">
+          <img *ngIf="!selectedImageURL" src="assets\cloud-upload-a30f385a928e44e199a62210d578375a.jpg" style="height: 100%;width: 100%;object-fit: contain;">
         </span>
       </div>
       <div class="col-lg-5 align-self-center">
-        <h4>Patient  <mark class="px-2 py-1 rounded text-white" style="background-color: #04aa6d;">{{result}}</mark></h4>
-        <h4>Probabilities:  </h4>
+        <h4 *ngIf="!result">Please upload a valid image for a more accurate prediction</h4>
+        <h4 *ngIf="result"> it seems that the Patient  <mark  class="px-2 py-1 rounded text-white" style="background-color: red;">{{result}}</mark></h4>
+        
       </div>
     </div>
   </div>
