--- a/users/src/app/components/doc-header/doc-header.component.html
+++ b/users/src/app/components/doc-header/doc-header.component.html
@@ -65,7 +65,7 @@
                     <a style="text-decoration: none;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                        Notifications <i class="fa fa-bell"></i><span style="color:red">{{number}}</span>
                     </a>
-                    <ul class="dropdown-menu-left" >
+                    <ul style="overflow-y: auto;max-height: 500px;" class="dropdown-menu-left" >
                       <li *ngIf="number==0">
                         <a class="notification-item">
                           <div class="notification-icon">
