--- a/users/src/app/components/doc-my-profile/doc-my-profile.component.html
+++ b/users/src/app/components/doc-my-profile/doc-my-profile.component.html
@@ -146,6 +146,42 @@ button:hover {
 			</div>
 		</div>
 	</div>
+	<section class="billsSection">
+		<div  id="my-bills" class="section-title" style="margin-top: 50px;">
+			<h2>My bills</h2>
+		  </div>
+		  <div class="tableContainer">
+			<table id="example" class="display table table-hover table-condensed" style="margin-bottom: 100px;">
+				<thead>
+					<tr>
+						<th>Bill No</th>
+						<th>Patient</th>
+						<th>Date</th>
+						<th>Description</th>
+						<th>Price</th>
+						<th>Discount</th>
+						<th>Tax</th>
+						<th>Total</th>
+					</tr>
+				</thead>
+			
+				<tbody *ngFor="let bill of bills">
+					<tr>
+						<td>{{bill.id}}</td>
+						<td>{{bill.patient.username}}</td>
+						<td>{{bill.date}}</td>
+						<td>{{bill.description}}</td>
+						<td> <span style="font-weight: bold;">{{bill.amount}} DT</span></td>
+						<td> <span style="font-weight: bold;">{{bill.discount}} DT</span></td>
+						<td> <span style="font-weight: bold;">{{bill.tax}} DT</span></td>
+						<td> <span style="font-weight: bold;">{{bill.total}} DT</span></td>
+				</tbody>
+			</table>
+
+		  </div>
+		  
+
+	</section>
 	
 </body>
 
