--- a/users/src/app/components/secretary-login/secretary-login.component.html
+++ b/users/src/app/components/secretary-login/secretary-login.component.html
@@ -17,6 +17,7 @@
 				
 
 				<button type="submit"> Login</button>
+				<div *ngIf="errorMessagee" class="alert alert-danger">{{ errorMessagee }}</div>
 				<a routerLink="/doc/login" class="switch-link">Im a Doctor ! take me to login page</a>
 				<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
 			</form>
